--- a/Proyecto_Grupal_Inventario/Views/Shared/_Layout.cshtml
+++ b/Proyecto_Grupal_Inventario/Views/Shared/_Layout.cshtml
@@ -1,10 +1,11 @@
 ﻿<!DOCTYPE html>
 <html>
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>@ViewBag.Title - Mi aplicación ASP.NET</title>
+    <title>@ViewBag.Title - Tienda 🔔</title>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css">
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
 </head>
@@ -17,22 +18,42 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @Html.ActionLink("Nombre de la aplicación", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+                @Html.ActionLink("Sistema de control", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Inicio", "Index", "Home")</li>
-                    <li>@Html.ActionLink("Acerca de", "About", "Home")</li>
-                    <li>@Html.ActionLink("Contacto", "Contact", "Home")</li>
+                    <li>@Html.ActionLink("Productos", "Producto", "MostrarProductos")</li>
+                    <li>@Html.ActionLink("Categorías", "Index", "Home")</li>
+                    <li>@Html.ActionLink("Ventas", "Index", "Home")</li>
+                    <li>@Html.ActionLink("Compas", "Index", "Home")</li>
+                    <li>@Html.ActionLink("Proveedores", "Index", "Home")</li>
+                    <li>@Html.ActionLink("Usuarios", "Index", "Home")</li>
                 </ul>
             </div>
         </div>
     </div>
     <div class="container body-content">
         @RenderBody()
+
         <hr />
+        <br />
+
         <footer>
-            <p>&copy; @DateTime.Now.Year - Mi aplicación ASP.NET</p>
+
+            <div class="row">
+                <div class="text-center col-lg-12">
+
+                    <a href="https://es-la.facebook.com/"><i class="fab fa-facebook fa-2x"></i></a>
+                    <a href="https://www.instagram.com/"><i class="fab fa-instagram fa-2x" style="margin-left:25px"></i></a>
+                    <a href="https://www.youtube.com/"><i class="fab fa-youtube fa-2x" style="margin-left:25px"></i></a>
+
+                </div>
+            </div>
+
+            <br />
+
+            <p class="text-center">&copy; @DateTime.Now.Year - Sistema de control</p>
+
         </footer>
     </div>
 
