Crud de productos

--- a/Proyecto_Grupal_Inventario/Views/Shared/_Layout.cshtml
+++ b/Proyecto_Grupal_Inventario/Views/Shared/_Layout.cshtml
@@ -18,11 +18,11 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @Html.ActionLink("Sistema de control", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+                @Html.ActionLink("Sistema de control", "MostrarProductos", "Producto", new { area = "" }, new { @class = "navbar-brand" })
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Productos", "Producto", "MostrarProductos")</li>
+                    <li>@Html.ActionLink("Productos", "MostrarProductos", "Producto")</li>
                     <li>@Html.ActionLink("Categorías", "Index", "Home")</li>
                     <li>@Html.ActionLink("Ventas", "Index", "Home")</li>
                     <li>@Html.ActionLink("Compas", "Index", "Home")</li>
