--- a/Proyecto_Grupal_Inventario/Views/Producto/MostrarProductos.cshtml
+++ b/Proyecto_Grupal_Inventario/Views/Producto/MostrarProductos.cshtml
@@ -2,7 +2,6 @@
 
 @model List<Productos>
 
-
 @{
     ViewBag.Title = "Productos";
 }
@@ -51,7 +50,7 @@
                                 <td>@pro.Categoria.NombreCategoria</td>
                                 <td>@pro.Proveedores.NombreProveedor</td>
                                 <td>
-                                    <button class="btn btn-warning" onclick="window.location.href = '/Producto/CreateOrEditProductos?idProducto=' + @pro.IdProducto" style="color:#000">Editar</button>
+                                    <button class="btn btn-success" onclick="window.location.href = '/Producto/CreateOrEditProductos?idProducto=' + @pro.IdProducto" style="color:#000">Editar</button>
                                 </td>
                                 <td>
                                     <button class="btn btn-danger" onclick="window.location.href = '/Producto/DeleteProductos?idProducto=' +@pro.IdProducto " style="color:#fff">Eliminar</button>
