--- a/Proyecto_Grupal_Inventario/Views/Shared/_Layout.cshtml
+++ b/Proyecto_Grupal_Inventario/Views/Shared/_Layout.cshtml
@@ -22,8 +22,8 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Productos", "Producto", "MostrarProductos")</li>
-                    <li>@Html.ActionLink("Categorías", "Index", "Home")</li>
+                    <li>@Html.ActionLink("Productos", "MostrarProductos" , "Producto")</li>
+                    <li>@Html.ActionLink("Categorías", "ShowCategories", "Categoria")</li>
                     <li>@Html.ActionLink("Ventas", "Index", "Home")</li>
                     <li>@Html.ActionLink("Compas", "Index", "Home")</li>
                     <li>@Html.ActionLink("Proveedores", "Index", "Home")</li>
